--- a/online_registration_v4/index.html
+++ b/online_registration_v4/index.html
@@ -23,19 +23,19 @@
         <form action="index.html" method="post">
             <fieldset>
                 <label for="name">Full Name</label>
-                <input type="text" id="name" name="user-name" placeholder="required" required><br>
+                <input type="text" id="name" name="user-name" placeholder="Required" required><br>
 
                 <label for="email">Email Address</label>
-                <input type="email" id="email" name="user-email" placeholder="required" required><br>
+                <input type="email" id="email" name="user-email" placeholder="Required" required><br>
 
                 <label for="phone">Phone Number</label>
-                <input type="tel" id="phone" name="user-phone"><br>
+                <input type="tel" id="phone" name="user-phone" placeholder="Optional"><br>
 
                 <label for="address1">Street Address</label>
-                <input type="text" id="address1" name="user-address1"><br>
+                <input type="text" id="address1" name="user-address1" placeholder="Optional"><br>
 
                 <label for="city">City</label>
-                <input type="text" id="city" name="user-city"><br>
+                <input type="text" id="city" name="user-city" placeholder="Optional"><br>
 
                 <label for="state">State</label>
                 <select id="state" name="user_state">
@@ -43,7 +43,7 @@
                 </select>
 
                 <label for="zip">Zip Code</label>
-                <input type="text" id="zip" name="user-zip">
+                <input type="text" id="zip" name="user-zip" placeholder="Optional">
             </fieldset>
 
         <h2>Newsletter</h2>
@@ -70,7 +70,7 @@
                 <label for="plain">Plain text</label><br>
                 <label for="topics">Other topics you'd like to hear about</label><br>
 
-                <textarea id="topics" name="user_topics"></textarea>
+                <textarea id="topics" name="user_topics" placeholder="Optional"></textarea>
             </fieldset>
 
             <button type="submit">Sign Up</button><br>
