switched span element to footer

--- a/online_registration_v4/index.html
+++ b/online_registration_v4/index.html
@@ -12,7 +12,6 @@
 </head>
 
 <body>
-        >
         <header class="main-header">The Code Review</header>
         <div class="sign-up">
         <h1>Sign up For our newsletter</h1>
@@ -91,7 +90,7 @@
             
         </form>
 
-        <span>Copyright The Code Review</span>
+        <footer>Copyright The Code Review</footer>
 
 
 
